--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
   <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
   <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
-  <a href="http://froxot.de/">More 3DS Games</a>
-  <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings!</a>
-  <a href="https://internetperson-dev.github.io/site/3ds">Test</a>
+  <a href="http://froxot.de/">3DS Games - 2</a>
+  <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings</a>
+  <a href="https://internetperson-dev.github.io/site/3ds">Test game</a>
 </body>
 </html>
