--- a/3ds.html
+++ b/3ds.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=400, height=200, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=400, height=480, user-scalable=no">
     <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
-            height: 200px; /* Set to the height of the top screen */
+            height: 480px; /* Total height (top and bottom screens) */
             display: flex;
             flex-direction: column; /* Arrange children vertically */
             align-items: center; /* Center elements horizontally */
         }
 
-        #topSpace {
-            height: 0; /* Height of the blank space, adjust if needed */
+        #topScreen {
+            height: 200px; /* Height of the top screen */
             width: 100%;
         }
 
@@ -24,11 +24,43 @@
             background-color: #8B4513; /* Brown ground color */
             border: 1px solid black; /* Optional: Add a border to make it more visible */
         }
+
+        #bottomScreen {
+            height: 280px; /* Bottom screen space for timer and audio */
+            width: 100%;
+            background-color: #FFFFFF; /* White background for the bottom screen */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around; /* Distribute the timer and music player evenly */
+        }
+
+        #timer {
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+            color: #000000;
+        }
+
+        audio {
+            width: 90%; /* Make the audio player responsive */
+        }
     </style>
 </head>
 <body>
-    <div id="topSpace"></div> <!-- Blank div for spacing -->
-    <canvas id="gameCanvas" width="400" height="200"></canvas> <!-- Adjusted width and height -->
+    <!-- Top Screen (Game) -->
+    <div id="topScreen">
+        <canvas id="gameCanvas" width="400" height="200"></canvas>
+    </div>
+
+    <!-- Bottom Screen (Timer and Music Player) -->
+    <div id="bottomScreen">
+        <div id="timer">Time: 0 seconds</div>
+        <audio controls>
+            <source src="path_to_music.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -46,7 +78,6 @@
             40: "Down"    // Down Arrow
         };
 
-        // Player properties
         var player = {
             x: 50,
             y: 150,
@@ -59,50 +90,45 @@
             grounded: false
         };
 
-        // Define end object for level completion
         var endObject = {
-            x: 370, // Position near the right edge of the canvas
-            y: 150, // Same height as the player
+            x: 370, 
+            y: 150, 
             width: 20,
             height: 30
         };
 
-        // Levels definition
         var levels = [
-            [ // Level 1
-                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+            [ 
+                { x: 0, y: 180, width: 400, height: 20 }, 
                 { x: 100, y: 160, width: 100, height: 20 },
                 { x: 200, y: 120, width: 100, height: 20 }
             ],
-            [ // Level 2
-                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+            [ 
+                { x: 0, y: 180, width: 400, height: 20 }, 
                 { x: 50, y: 150, width: 100, height: 20 },
                 { x: 250, y: 100, width: 100, height: 20 },
                 { x: 150, y: 130, width: 50, height: 20 }
             ]
         ];
 
-        var currentLevel = 0; // Start with level 0
-        var platforms = levels[currentLevel]; // Platforms for the current level
+        var currentLevel = 0;
+        var platforms = levels[currentLevel];
 
-        // Draw player
+        // Modularize drawing functions
         function drawPlayer() {
-            ctx.fillStyle = '#FF0000'; // Red color for the player
+            ctx.fillStyle = '#FF0000'; 
             ctx.fillRect(player.x, player.y, player.width, player.height);
         }
 
-        // Draw platforms
         function drawPlatforms() {
-            ctx.fillStyle = '#228B22'; // Green color for platforms
-            for (var i = 0; i < platforms.length; i++) {
-                var platform = platforms[i];
+            ctx.fillStyle = '#228B22'; 
+            platforms.forEach(platform => {
                 ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            }
+            });
         }
 
-        // Draw end object
         function drawEndObject() {
-            ctx.fillStyle = '#FFD700'; // Gold color for the end object
+            ctx.fillStyle = '#FFD700';
             ctx.fillRect(endObject.x, endObject.y, endObject.width, endObject.height);
         }
 
@@ -115,76 +141,69 @@
             if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = false;
         });
 
-        // Update player and check collisions
-        function update() {
-            player.dy += player.gravity; // Apply gravity
-            player.y += player.dy; // Move player by its vertical speed
+        function updatePlayer() {
+            player.dy += player.gravity;
+            player.y += player.dy;
 
-            // Check for collision with platforms
-            player.grounded = false; // Reset grounded state
-            for (var i = 0; i < platforms.length; i++) {
-                var platform = platforms[i];
-                // Check for collision
+            player.grounded = false;
+            platforms.forEach(platform => {
                 if (
                     player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
                     player.y + player.height + player.dy >= platform.y
                 ) {
-                    player.dy = 0; // Reset vertical speed
-                    player.y = platform.y - player.height; // Place player on top of platform
-                    player.grounded = true; // Player is grounded
+                    player.dy = 0;
+                    player.y = platform.y - player.height;
+                    player.grounded = true;
                 }
-            }
+            });
 
-            // Prevent player from falling through the bottom
             if (player.y > canvas.height) {
                 player.y = canvas.height;
                 player.dy = 0;
             }
 
-            // Check for collision with the end object
-            if (
-                player.x < endObject.x + endObject.width &&
+            if (player.x < endObject.x + endObject.width &&
                 player.x + player.width > endObject.x &&
                 player.y < endObject.y + endObject.height &&
-                player.y + player.height > endObject.y
-            ) {
-                window.location.href = "https://internetperson-dev.github.io/site/3ds1"; // Redirect to the specified URL
+                player.y + player.height > endObject.y) {
+                window.location.href = "https://internetperson-dev.github.io/site/3ds1";
             }
 
-            // Check if the player has reached the end of Level 1
             if (currentLevel === 0 && player.x + player.width > canvas.width) {
-                currentLevel++; // Move to Level 2
-                resetLevel(); // Reset for the new level
+                currentLevel++;
+                resetLevel();
             }
 
-            // Handle player movement
             if (keys["Left"]) player.x -= player.speed;
             if (keys["Right"]) player.x += player.speed;
             if (keys["Up"] && player.grounded) player.dy = player.jumpPower;
 
-            // Keep player within canvas bounds
             if (player.x < 0) player.x = 0;
             if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
 
-            // Clear the canvas and redraw everything
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
-            drawEndObject(); // Draw the end object
+            drawEndObject();
             drawPlayer();
         }
 
-        // Reset the current level
         function resetLevel() {
-            player.x = 50; // Reset player's position
-            player.y = 150; // Reset player's height
-            player.dy = 0; // Reset vertical speed
-            platforms = levels[currentLevel]; // Load the new level's platforms
+            player.x = 50;
+            player.y = 150;
+            player.dy = 0;
+            platforms = levels[currentLevel];
         }
 
-        // Start game loop at 60 FPS
-        setInterval(update, 1000 / 60);
+        setInterval(updatePlayer, 1000 / 60);
+
+        // Timer Logic
+        var timeElapsed = 0;
+        setInterval(function() {
+            timeElapsed++;
+            document.getElementById("timer").innerText = `Time: ${timeElapsed} seconds`;
+        }, 1000);
     </script>
 </body>
 </html>
