--- a/3ds.html
+++ b/3ds.html
@@ -2,57 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=400, height=480, user-scalable=no">
+    <meta name="viewport" content="width=400, height=200, initial-scale=1.0, user-scalable=no">
     <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
-            height: 480px; /* Total height for 3DS top and bottom screens */
+            height: 200px; /* Set to the height of the top screen */
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-direction: column; /* Arrange children vertically */
+            align-items: center; /* Center elements horizontally */
         }
 
-        #topScreen {
-            height: 200px; /* Game screen */
+        #topSpace {
+            height: 0; /* Height of the blank space, adjust if needed */
             width: 100%;
         }
 
         #gameCanvas {
             background-color: #8B4513; /* Brown ground color */
-            border: 1px solid black;
-        }
-
-        #bottomScreen {
-            height: 280px; /* Bottom screen space for timer */
-            width: 100%;
-            background-color: #FFFFFF;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #timer {
-            font-size: 24px;
-            font-family: Arial, sans-serif;
-            color: #000000;
+            border: 1px solid black; /* Optional: Add a border to make it more visible */
         }
     </style>
 </head>
 <body>
-    <!-- Top Screen (Game) -->
-    <div id="topScreen">
-        <canvas id="gameCanvas" width="400" height="200"></canvas>
-    </div>
-
-    <!-- Bottom Screen (Timer) -->
-    <div id="bottomScreen">
-        <div id="timer">Time: 0 seconds</div>
-    </div>
-
+    <div id="topSpace"></div> <!-- Blank div for spacing -->
+    <canvas id="gameCanvas" width="400" height="200"></canvas> <!-- Adjusted width and height -->
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -70,6 +46,7 @@
             40: "Down"    // Down Arrow
         };
 
+        // Player properties
         var player = {
             x: 50,
             y: 150,
@@ -82,47 +59,50 @@
             grounded: false
         };
 
+        // Define end object for level completion
         var endObject = {
-            x: 370, 
-            y: 150, 
+            x: 370, // Position near the right edge of the canvas
+            y: 150, // Same height as the player
             width: 20,
             height: 30
         };
 
+        // Levels definition
         var levels = [
-            [ 
-                { x: 0, y: 180, width: 400, height: 20 }, 
+            [ // Level 1
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
                 { x: 100, y: 160, width: 100, height: 20 },
                 { x: 200, y: 120, width: 100, height: 20 }
             ],
-            [ 
-                { x: 0, y: 180, width: 400, height: 20 }, 
+            [ // Level 2
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
                 { x: 50, y: 150, width: 100, height: 20 },
                 { x: 250, y: 100, width: 100, height: 20 },
                 { x: 150, y: 130, width: 50, height: 20 }
             ]
         ];
 
-        var currentLevel = 0;
-        var platforms = levels[currentLevel];
+        var currentLevel = 0; // Start with level 0
+        var platforms = levels[currentLevel]; // Platforms for the current level
 
         // Draw player
         function drawPlayer() {
-            ctx.fillStyle = '#FF0000'; 
+            ctx.fillStyle = '#FF0000'; // Red color for the player
             ctx.fillRect(player.x, player.y, player.width, player.height);
         }
 
         // Draw platforms
         function drawPlatforms() {
-            ctx.fillStyle = '#228B22'; 
-            platforms.forEach(function(platform) {
+            ctx.fillStyle = '#228B22'; // Green color for platforms
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
                 ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            });
+            }
         }
 
         // Draw end object
         function drawEndObject() {
-            ctx.fillStyle = '#FFD700';
+            ctx.fillStyle = '#FFD700'; // Gold color for the end object
             ctx.fillRect(endObject.x, endObject.y, endObject.width, endObject.height);
         }
 
@@ -136,69 +116,75 @@
         });
 
         // Update player and check collisions
-        function updatePlayer() {
-            player.dy += player.gravity;
-            player.y += player.dy;
+        function update() {
+            player.dy += player.gravity; // Apply gravity
+            player.y += player.dy; // Move player by its vertical speed
 
-            player.grounded = false;
-            platforms.forEach(function(platform) {
+            // Check for collision with platforms
+            player.grounded = false; // Reset grounded state
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
+                // Check for collision
                 if (
                     player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
                     player.y + player.height + player.dy >= platform.y
                 ) {
-                    player.dy = 0;
-                    player.y = platform.y - player.height;
-                    player.grounded = true;
+                    player.dy = 0; // Reset vertical speed
+                    player.y = platform.y - player.height; // Place player on top of platform
+                    player.grounded = true; // Player is grounded
                 }
-            });
+            }
 
+            // Prevent player from falling through the bottom
             if (player.y > canvas.height) {
                 player.y = canvas.height;
                 player.dy = 0;
             }
 
-            if (player.x < endObject.x + endObject.width &&
+            // Check for collision with the end object
+            if (
+                player.x < endObject.x + endObject.width &&
                 player.x + player.width > endObject.x &&
                 player.y < endObject.y + endObject.height &&
-                player.y + player.height > endObject.y) {
-                window.location.href = "https://internetperson-dev.github.io/site/3ds1";
+                player.y + player.height > endObject.y
+            ) {
+                window.location.href = "https://internetperson-dev.github.io/site/3ds1"; // Redirect to the specified URL
             }
 
+            // Check if the player has reached the end of Level 1
             if (currentLevel === 0 && player.x + player.width > canvas.width) {
-                currentLevel++;
-                resetLevel();
+                currentLevel++; // Move to Level 2
+                resetLevel(); // Reset for the new level
             }
 
+            // Handle player movement
             if (keys["Left"]) player.x -= player.speed;
             if (keys["Right"]) player.x += player.speed;
             if (keys["Up"] && player.grounded) player.dy = player.jumpPower;
 
+            // Keep player within canvas bounds
             if (player.x < 0) player.x = 0;
             if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
 
+            // Clear the canvas and redraw everything
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
-            drawEndObject();
+            drawEndObject(); // Draw the end object
             drawPlayer();
         }
 
+        // Reset the current level
         function resetLevel() {
-            player.x = 50;
-            player.y = 150;
-            player.dy = 0;
-            platforms = levels[currentLevel];
+            player.x = 50; // Reset player's position
+            player.y = 150; // Reset player's height
+            player.dy = 0; // Reset vertical speed
+            platforms = levels[currentLevel]; // Load the new level's platforms
         }
 
-        setInterval(updatePlayer, 1000 / 60);
-
-        // Timer Logic
-        var timeElapsed = 0;
-        setInterval(function() {
-            timeElapsed++;
-            document.getElementById("timer").innerText = `Time: ${timeElapsed} seconds`;
-        }, 1000);
+        // Start game loop at 60 FPS
+        setInterval(update, 1000 / 60);
     </script>
 </body>
 </html>
