--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css"
-  <title>Web links</title>
+  <title>Links</title>
 </head>
 <body>
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
