--- a/title.html
+++ b/title.html
@@ -90,7 +90,7 @@
             // Start music if it hasn’t started already
             document.getElementById('background-music').play();
             // Navigate to main page
-            window.location.href = "main.html"; // Replace with your main page URL
+            window.location.href = "3ds.html"; // Replace with your main page URL
         }
     </script>
 </body>
