--- a/title.html
+++ b/title.html
@@ -68,8 +68,7 @@
 </head>
 <body>
     <div class="title-screen">
-        <h1>Welcome to Our Site</h1>
-        <p>Immerse yourself in the experience</p>
+        <h1>Platformer game Title screen</h1>
         <button class="button" onclick="enterSite()">Enter</button>
     </div>
 
