--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
   <a href="http://froxot.de/">3DS Games - 2</a>
   <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings</a>
-  <a href="https://internetperson-dev.github.io/site/3ds">Test game</a>
+  <a href="https://internetperson-dev.github.io/site/title">Test game</a>
 </body>
 </html>
