--- a/title.html
+++ b/title.html
@@ -5,44 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platformer Game Title Screen</title>
     <style>
-        /* CSS: Basic Layout Compatible with Older Browsers */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body, html {
-            height: 100%;
-            font-family: Arial, sans-serif;
-            overflow: hidden;
+        /* Minimal CSS */
+        body {
             text-align: center;
             background-color: #f8b500;
             color: white;
+            font-family: Arial, sans-serif;
         }
         .title-screen {
-            display: inline-block;
-            width: 100%;
-            padding: 20px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .title-screen h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-            text-transform: uppercase;
+            margin-top: 20%;
         }
         .button {
             padding: 10px 20px;
-            font-size: 1em;
-            color: white;
             background-color: #ff7e5f;
+            color: white;
             border: none;
             cursor: pointer;
-        }
-        .button:hover {
-            background-color: #ff3a3a;
         }
     </style>
 </head>
@@ -56,7 +34,7 @@
     <audio id="background-music" src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" preload="auto" loop></audio>
 
     <script>
-        // JavaScript for Older Browsers
+        // JavaScript for Music and Button Action
         (function() {
             var audio = document.getElementById('background-music');
 
@@ -78,7 +56,7 @@
             // Enter Site function for button click
             window.enterSite = function() {
                 audio.play();
-                window.location.href = "3ds.html"; // Change to your main page URL
+                window.location.href = "3ds.html"; // Replace with your main page URL
             };
         })();
     </script>
