--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   <meta charset="UTF-8">
-  <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css"
+  <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
+  <meta name="author" content="Internetperson-dev">
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Links</title>
 </head>
 <body>
-  <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
-  <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
-  <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
-  <a href="http://froxot.de/">3DS Games - 2</a>
-  <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings</a>
-  <a href="https://internetperson-dev.github.io/site/title">Test game</a>
+  <header>
+    <h1>Useful Links</h1>
+  </header>
+  <main>
+    <ul>
+      <li><a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">Linux Installer</a></li> 
+      <li><a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">Linux Desktop Setup</a></li>
+      <li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
+      <li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
+      <li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
+      <li><a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">Test game</a></li>
+    </ul>
+  </main>
+  <footer>
+    <p>Created by Internetperson-dev</p>
+  </footer>
 </body>
 </html>
