--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
   <title>Links</title>
 <body>
 
+<style>
+
+/* style.css */
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+
+:root {
+  --text: #000;
+  --bg: #fff;
+}
+
+body {
+  font-family: "Source Sans Pro", sans-serif;
+  background-color: var(--bg);
+  color: var(--text);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text: #fff;
+    --bg: #000;
+  }
+}
+
+  
+</style>
+
   <header>
     <h1 class="md-typescale-display-medium">Useful Links</h1>
   </header>
